# gtk-grid-board

./: README.md  ggb.c  ggb.h  ggb_test.c  meson.build
example/: data.txt  ggb_demo.py
